# simrep/internal/model/similarity_history.go
@@ -1,0 +1,12 @@
+package model
+
+import "time"
+
+type SimilarityHistory struct {
+	Date       time.Time
+	DocumentID string
+	ID         string
+	Matches    []*DocumentSimilarMatch
+}
+
+type SimilarityHistoryList = List[*SimilarityHistory]
