# simrep/internal/model/similarity_history_query.go
@@ -1,0 +1,13 @@
+package model
+
+import "time"
+
+type SimilarityHistoryQuery struct {
+	DocumentID string
+
+	Limit  int
+	Offset int
+
+	DateFrom time.Time
+	DateTo   time.Time
+}
